compiler/testData/diagnostics/tests/redeclarations/ScriptAndClassConflict.kts
// FILE: f1.kt
package test

class <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>A<!>
class F1

// FILE: A.kts
package test

val x = 1

class F1